--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "postcss": "^8.3.11",
     "postcss-loader": "^6.2.0",
     "postcss-preset-env": "^6.7.0",
+    "pug": "^2.0.4",
+    "pug-loader": "^2.4.0",
     "sass": "^1.43.4",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
